--- a/client/public/index.html
+++ b/client/public/index.html
@@ -41,6 +41,21 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+        if ("serviceWorker" in navigator) {
+            window.addEventListener("load", () => {
+                navigator.serviceWorker
+                    .register("serviceworker.js")
+                    .then(reg => {
+                        console.log("We found your service worker file!", reg);
+                    })
+                    .catch((error) => {
+                        console.log(`Service Worker Registration Failed! Error: ${error}`);
+                        console.log(error);
+                    });
+            });
+        }
+    </script>
 </body>
 
 </html>
